--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -4,7 +4,19 @@
   <meta charset="UTF-8">
   <title>Basketball Team Signup</title>
  </head>
+
+ <h1> Create a Basketball Team! </h1>
  <body>
+ <form method="POST" action="/team">
+      <lable>Team Name: <input type="text" name="name" /></lable><br/>
+      <lable>Coach: <input type="text" name="coach" /></lable><br/>
+      <lable>Point Guard: <input type="text" name="pg" /></lable><br/>
+      <lable>Shooting Guard: <input type="text" name="sg" /></lable><br/>
+      <lable>Small Forward: <input type="text" name="pf" /></lable><br/>
+      <lable>Power Forward: <input type="text" name="sf" /></lable><br/>
+      <lable>Center: <input type="text" name="c" /></lable><br/>
+      <input type="submit" id="Submit" />
+    </form> 
  </body>
 </html>
 
