--- a/views/team.erb
+++ b/views/team.erb
@@ -5,9 +5,15 @@
   <title>Basketball Team</title>
  </head>
  <body>
- 
-
-
+    <h1>Basketball !</h1>
+    <p>Team Name: <%= @name %>
+    Coach: <%= @coach %>
+    Point Guard: <%= @pg %>
+    Power Forward: <%= @pf %>
+    Shooting Guard: <%= @sg %>
+    Small Forward: <%= @sf %>
+    Center: <%= @c %>
+    </p>
  </body>
 </html>
 
